# timer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  example.cpp  main.cpp  scopetimer.cpp  seriestimer.cpp  stopwatch.cpp  timer_config.hpp.in
src/include/: scopetimer.h  scopetimer.hpp  seriestimer.h  seriestimer.hpp  stopwatch.h  stopwatch.hpp
